--- a/TodoListWPF/App.config
+++ b/TodoListWPF/App.config
@@ -12,4 +12,4 @@
             <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
         </providers>
     </entityFramework>
-<connectionStrings><add name="TodoList" connectionString="data source=DESKTOP-S44KKNG;initial catalog=TodoList; integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+<connectionStrings><add name="TodoList" connectionString="data source=FATIH;initial catalog=TodoListWPF; integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
