--- a/TodoListWPF/TodoListWPF.csproj
+++ b/TodoListWPF/TodoListWPF.csproj
@@ -181,6 +181,7 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
